# C-Minus-Minus-Compiler

./: CMakeLists.txt  LICENSE  Makefile  README.md  error_file.txt  error_handler.cpp  error_handler.hpp  gui.py  handler.cpp  handler.hpp  helper.hpp  input.txt  lexer.l  main.cpp  output.txt  output_symbol_table.txt  parser.ypp  run.sh  symbol_table_generator.cpp  symbol_table_generator.hpp  todo.txt
data/: input.txt
include/ast/: ast_node.hpp  block_node.hpp  control_flow_nodes.hpp  expression_nodes.hpp  function_nodes.hpp  statement_nodes.hpp
include/codegen/: quadruples_generator.hpp
include/error/: error_handler.hpp
include/semantic/: symbol.hpp  symbol_table.hpp  type_checker.hpp
logs/: error_file.txt
src/: lexer.l  main.cpp  parser.ypp
src/ast/: block_node.cpp  control_flow_nodes.cpp  expression_nodes.cpp  function_nodes.cpp  statement_nodes.cpp
src/codegen/: quadruples_generator.cpp
src/error/: error_handler.cpp
src/semantic/: symbol.cpp  symbol_table.cpp  type_checker.cpp
tests/test1/: test1.txt
tests/test1/logs/: error_file.txt  output_symbol_table.csv  quadrables.csv
tests/test2/: test2.txt
tests/test2/logs/: error_file.txt  output_symbol_table.csv  quadrables.csv
tests/test3/: test3.txt
tests/test3/logs/: error_file.txt  output_symbol_table.csv  quadrables.csv
tests/test4/: test4.txt
tests/test4/logs/: error_file.txt  output_symbol_table.csv  quadrables.csv
tests/test5/: test5.txt
tests/test5/logs/: error_file.txt  output_symbol_table.csv  quadrables.csv
tests/test6/: test6.txt
tests/test7/: test7.txt
